# Scandy

./: .dockerignore  .env.example  .gitignore  README.md  capacitor.config.json  compose.yaml  improvements.md  main.py  package-lock.json  package.json  pyproject.toml  vue.config.js
backend/: InfoExtractionMLX.py  README.md  app.py  categories.json  main.py  receipt_extractor.py  requirements.txt  run_waitress.py
backend/ocr/: __init__.py  common.py  mlx_backend.py  ollama_backend.py
deployment/: README.md  common.sh  deploy.sh  get-ip.sh  nginx.conf  nginx.conf.template  start.sh  status.sh  stop.sh
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf  requirements.docker.txt
frontend/: .env.production  capacitor.config.json  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/android/app/: build.gradle
frontend/public/: index.html
frontend/src/: App.vue  main.js  themeStore.js
frontend/src/assets/: main.css
frontend/src/components/: AllTransactions.vue  BaseModal.vue  CategoryDetailModal.vue  CategorySummaryList.vue  ConfirmDeleteModal.vue  ConfirmationModal.vue  EditModal.vue  Home.vue  (+7 more)
public/: index.html
src/: App.vue  themeStore.js
src/components/: AllTransactions.vue  BaseModal.vue  BudgetModal.vue  CategoryChart.vue  CategoryDetailModal.vue  ConfirmationModal.vue  EditModal.vue  Home.vue  SearchModal.vue  ThemeSwitcher.vue  TransactionManager.vue
src/composables/: useIntent.js  useTransactions.js
src/router/: index.js
src/views/: AccountTransactions.vue  AccountsPage.vue  SubscriptionsPage.vue
(+17 files in other folders)
