[project]
name = "scandy"
version = "0.1.0"
description = "Receipt scanner using MLX VLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "mlx-vlm>=0.4.4",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "waitress>=3.0.2",
    "werkzeug>=3.1.8",
]

[tool.pyright]
extraPaths = ["backend"]
